new test file for clusters

--- a/scGFA/notebooks/clustering_test.py.ipynb
+++ b/scGFA/notebooks/clustering_test.py.ipynb
@@ -2,18 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np \n",
-    "\n",
-    "from scGFA.test import clustering_test\n",
-    "from scGFA.test import annotations_test\n",
+    "import scipy as s\n",
+    "from scGFA.test import clustering_test_new\n",
     "from scipy.stats.stats import pearsonr  \n",
     "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tmp, z_score, scale = clustering_test_new.run_test(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tmp.getParameters()['mean']\n",
+    "scale = scale.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.02386068, -4.85035527],\n",
+       "       [-0.01442261,  4.8162028 ]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp.getParameters()['mean']/scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75.368915162559333"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_score * s.sqrt(300)"
    ]
   }
  ],
