--- a/scGFA/notebooks/clustering_test.py.ipynb
+++ b/scGFA/notebooks/clustering_test.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -12,46 +12,55 @@
     "import scipy as s\n",
     "from scGFA.test import clustering_test_new\n",
     "from scipy.stats.stats import pearsonr  \n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "import math "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "tmp, z_score, scale = clustering_test_new.run_test(False)"
+    "tmp, z_score, scale = clustering_test_new.run_test(False, seed=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "tmp.getParameters()['mean']\n",
+    "tmp.getParameters()['var']\n",
     "scale = scale.mean(axis=0)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rescaling the latent variables mean and sd with the relative weights "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mean = tmp.getParameters()['mean']#/scale\n",
+    "var = tmp.getParameters()['var'] #/(scale**2.) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -59,22 +68,21 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.02386068, -4.85035527],\n",
-       "       [-0.01442261,  4.8162028 ]])"
+       "155.41186151924438"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tmp.getParameters()['mean']/scale"
+    "(mean[0,1] - mean[1,1]) / math.sqrt(var[0,1] + var[1,1])   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -82,10 +90,10 @@
     {
      "data": {
       "text/plain": [
-       "75.368915162559333"
+       "-9.4211143953199166"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
