corrected with 0.5 in posterior prob of s

--- a/scGFA/suppl/spike_slab_samplewisetau.tex
+++ b/scGFA/suppl/spike_slab_samplewisetau.tex
@@ -91,7 +91,7 @@ Update for $q(s_{dk}^m)$:
 \]
 where
 \begin{align*}
-\lambda_{dk}^m &= \la \log\frac{\theta}{1-\theta} \ra + \frac{ \Big( \sum_{n=1}^{N} y_{nd}^m \la z_{nk} \ra \tau_{nd}^m- \sum_{j \neq k} \la s_{dj}^m\hat{w}_{dj}^m\ra \sum_{n=1}^{N} \la z_{nk} \ra \la z_{nj} \ra \tau_{nd}^m\Big)^2}{\sum_{n=1}^N \tau_{nd}^m  \la z_{nk}^2\ra +\la\alpha_k^m\ra}\\
+\lambda_{dk}^m &= \la \log\frac{\theta}{1-\theta} \ra + 0.5 \frac{ \Big( \sum_{n=1}^{N} y_{nd}^m \la z_{nk} \ra \tau_{nd}^m- \sum_{j \neq k} \la s_{dj}^m\hat{w}_{dj}^m\ra \sum_{n=1}^{N} \la z_{nk} \ra \la z_{nj} \ra \tau_{nd}^m\Big)^2}{\sum_{n=1}^N \tau_{nd}^m  \la z_{nk}^2\ra +\la\alpha_k^m\ra}\\
  &+ 0.5 \log(\la\alpha_k^m\ra) - 0.5 \log(\sum_{n=1}^N \tau_{nd}^m  \la z_{nk}^2\ra +\la\alpha_k^m\ra)
 \end{align*}
 
