--- a/MOFAtools/vignettes/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_CLL.Rmd
@@ -30,23 +30,29 @@ object <- loadModel(outfile)
 object
 ```
 
-<!-- ## R - based -->
-<!-- Ideally this should be replace by an interal function (C++ based?) -->
-<!-- ```{r} -->
-<!-- object <- runMOFA(object) -->
-<!-- ``` -->
+## R - based
+Ideally this should be replace by an interal function (C++ based?)
+```{r}
+object <- runMOFA(object)
+```
 
 
 # Step 3: Label Factors
 Use feature sets (e.g. gene sets) to test for enrichment and show top weights -> arrive at lables for each factor
 ```{r}
-labelFactors(object)
+setFactornames(object, names)
 ```
 
 
 # Show variance explained
 ```{r}
 calculateVarianceExplained(object)
+```
+
+# Show LF scatterplots
+```{r}
+scatterPairs(object)
+sctterPlot(object, facotr)
 ```
 
 # Show top weights per view and factor
@@ -56,9 +62,16 @@ showWeights(object, "view", factor, ntop, ntail, manual)
 
 ```
 
+
 # Show enriched gene sets per factor
 ```{r}
 GSEA(object, ...)
+```
+
+#Show real data
+```{r}
+showHeatmap4topFeautres(object, view, factor)
+showScatter(object, factor, feature)
 ```
 
 
