--- a/MOFAtools/vignettes/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_CLL.Rmd
@@ -108,18 +108,70 @@ showWeights(object, "view", factor, ntop, ntail, manual)
 
 ```
 
+=======
+# Plot the observed values of relevant features
 
-# Show enriched gene sets per factor
+## Heatmap 
 ```{r}
-GSEA(object, ...)
+showDataHeatmap(model, view, factor, nfeatures=50)
 ```
 
-#Show real data
+## Scatterplot
+The X axis is the latent variable and the Y axis is the observed value of the feature
 ```{r}
-showHeatmap4topFeautres(object, view, factor)
-showScatter(object, factor, feature)
+showDataScatter(model, view, factor, nfeatures=50, colour_by=NULL, shape_by=NULL)
 ```
 
+# Feature set enrichment analysis
+
+The characterisation of factors usually requires the inspection of the corresponding weights to identify features with strong influence. However, looking at single features can be challenging and often the combination of signal from functionally related sets of features (i.e. gene ontologies) is required.
+Here we implemented a feature set enrichment analysis method (FeatureSetEnrichmentAnalysis) derived from the PCGSE package (REF).
+The input of these function is a MOFA trained model (MOFAmodel), the factors for which to perform feature set enrichment (character vector), the feature sets (matrix) and a set of options regarding how the analysis should be performed. For more information see ...
+
+Here we are going to perform feature set enrichment analysis on the mRNA view.
+
+## Load feature sets
+The input format for feature sets has to be a binary matrix where the rows represent feature sets and the columns are features where a value of 1 indicates that the feature belongs to the corresponding feature set.
+```{r}
+
+```
+
+The next step is to define the options for the analysis.
+Here we are going to use the absolute value of the weight (or loading) as feature statistic, the mean difference between the features in the gene set and the features outside the gene set as a feature set statistic and the correlation-adjusted parametric statistical test.
+
+## Perform Feature Set Enrichment Analysis
+```{r}
+p.values <- FeatureSetEnrichmentAnalysis(
+  model,
+  view = "mRNA", 
+  factors = "all", 
+  feature.sets = reactome,
+  local.statistic = "loading",
+  transformation = "abs.value",
+  global.statistic = "mean.diff",
+  statistical.test = "cor.adj.parametric",
+  nperm=NA, 
+  min.size=10,
+  cores=1
+)
+```
+
+## Correct for multiple testing
+```{r}
+p.values_adj <- apply(p.values, 2,function(lfw) p.adjust(lfw, method = "BH"))
+```
+
+## Visualise the results
+
+### All factors 
+```{r}
+Heatmap_FeatureSetEnrichmentAnalysis(gsea.out.adj_reactome, threshold=0.1)
+```
+
+### Individual factors
+```{r}
+LinePlot_FeatureSetEnrichmentAnalysis(gsea.out.adj_reactome, view, factor, threshold=0.1, max.pathways=25)
+```
 
 # Impute Missing
 ```{r}
