--- a/MOFAtools/vignettes/MOFA_example_scMT.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_scMT.Rmd
@@ -11,7 +11,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r}
+```{r, echo=FALSE, message=FALSE}
 devtools::load_all("/Users/ricard/mofa/MOFAtools")
 
 library(MultiAssayExperiment)
@@ -61,28 +61,53 @@ model <- loadModel("/Users/ricard/scMT/mofa/out/model.hdf5")
 # Step 3: Analyse a trained MOFA model
 
 ## Show the variance explained for each factor in each view
-```{r}
-calculateVarianceExplained(object)
+```{r, fig.height=7, fig.width=7}
+r2 <- calculateVarianceExplained(model, views="all", factors="all", plotit=T, perFeature=F, 
+                           orderFactorsbyR2=T, showtotalR2=T)
 ```
 
 ## Scatterplots of pairs of latent variables
 ```{r}
-scatterPairs(model, factors = c("2","3","4"), colour_by = sample_metadata[sampleNames(model),]$culture)
-# sctterPlot(object, facotr)
+# culture <- sample_metadata[sampleNames(model),]$culture
+# scatterPairs(model, factors = c("1","2","3","4"))
+scatterPlot(model, idx="2", idy="3")
+```
+
+### Correlation of latent variables
+```{r}
+FactorsCorPlot(model)
 ```
 
 ## Characterisation of specific latent factors
 
+### Correlation with covariates
+```{r}
+
+# Number of expressed genes
+cor( colSums(model@TrainData$expr>0), getExpectations(model,"Z","E")[,-1], use="complete.obs")
+
+# Mean methylation rate
+cor( colMeans(model@TrainData$met_genebody, na.rm=T), getExpectations(model,"Z","E"), use="complete.obs")
+```
+
 ### Show weights and identify most relevant features
 ```{r}
-showWeightHeatmap(object, "view")
-showWeights(object, "view", factor, ntop, ntail, manual)
+library(magrittr)
+library(dplyr)
+showWeightHeatmap(model, "expr", show_rownames=F)
+showWeights(model, view="expr", factor="4", ntop=20, ntail=20)
+
+# W <- getExpectations(model,"SW","E")$expr
+# Z <- getExpectations(model,"Z","E")
+# Yexpr <- model@TrainData$expr
+# Ymet <- model@TrainData$met_genebody
+# Ypred <- Z %*% t(W)
 ```
 
 ### Show original data for the genes with top weights
 ```{r, fig.height=7, fig.width=11}
 view <- "expr"
-factor <- "3"
+factor <- "5"
 showDataHeatmap(model, view, factor, nfeatures=300, show_colnames=F, show_rownames=T)
 
 # The X axis is the latent variable and the Y axis is the observed value of the feature
@@ -101,8 +126,12 @@ Here we are going to use the absolute value of the weight (or loading) as featur
 # The input format for feature sets has to be a binary matrix where the rows represent feature sets and the columns are features where a value of 1 indicates that the feature belongs to the corresponding feature set.
 
 # Load reactome annotations
-feature.sets <- readRDS("/Users/ricard/data/reactome/v59/mus_musculus/out/mouse_v75_reactome.rds")
-# msigdb <- readRDS("/Users/ricard/data/MSigDB/v6.0/mus_musculus/C5/bp_binary_matrix_ensembl.rds")
+# feature.sets <- 
+feature.sets <- rbind(
+  readRDS("/Users/ricard/data/reactome/v59/mus_musculus/out/mouse_v75_reactome.rds"),
+  # readRDS("/Users/ricard/data/MSigDB/v6.0/mus_musculus/C5/bp_binary_matrix_ensembl.rds"),
+  readRDS("/Users/ricard/data/manual_genesets/binary_matrix.rds")
+)
 
 # Run Feature Set Enrichment Analysis
 p.values <- FeatureSetEnrichmentAnalysis(
@@ -126,7 +155,6 @@ rownames(p.values) <- stringr::str_replace_all(rownames(p.values), reactome_meta
 
 # Correct for multiple testing
 p.values_adj <- apply(p.values, 2,function(lfw) p.adjust(lfw, method = "BH"))
-
 
 # Visualise the results 
 # all factors
