--- a/MOFAtools/vignettes/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_CLL.Rmd
@@ -12,10 +12,9 @@ vignette: >
 ---
 
 ```{r}
-# devtools::load_all("/Users/bvelten/Documents/MOFA/MOFApackage/scGFA/MOFAtools/")
-devtools::load_all("/Users/ricard/mofa/MOFAtools")
+devtools::load_all("/Users/bvelten/Documents/MOFA/MOFApackage/scGFA/MOFAtools/")
+# devtools::load_all("/Users/ricard/mofa/MOFAtools")
 library(MultiAssayExperiment)
-library(reshape)
 ```
 
 # Step 1: Initialize MOFA object
@@ -61,17 +60,17 @@ Important:
 - outFile: Output file for the model
 - mofaDir: directory of the MOFA package
 ```{r}
-DirOptions <- list(
-  "tmpDir" = "/tmp",
-  "outFile" = "/Users/ricard/test.hdf5",
-  "mofaDir" = "/Users/ricard/mofa/MOFA"
-)
-
 # DirOptions <- list(
-#   "tmpDir" = "/users/bvelten/Documents/MOFA/CLL_MOFA_data/testPipeline/",
-#   "outFile" = "/users/bvelten/Documents/MOFA/CLL_MOFA_data/testPipeline/test.hdf5",
-#   "mofaDir" = "/users/bvelten/Documents/MOFA/MOFApackage/scGFA/MOFA"
+#   "tmpDir" = "/tmp",
+#   "outFile" = "/Users/ricard/test.hdf5",
+#   "mofaDir" = "/Users/ricard/mofa/MOFA"
 # )
+
+DirOptions <- list(
+  "tmpDir" = "/users/bvelten/Documents/MOFA/CLL_MOFA_data/testPipeline/",
+  "outFile" = "/users/bvelten/Documents/MOFA/CLL_MOFA_data/testPipeline/test.hdf5",
+  "mofaDir" = "/users/bvelten/Documents/MOFA/MOFApackage/scGFA/MOFA"
+)
 ```
 
 ### Define model options
@@ -109,8 +108,11 @@ object <- prepareMOFA(object,
 ## Run MOFA
 This step can take some time, it is recommended to run it from the Python-based module
 ```{r}
-object <- runMOFA(object, DirOptions)
+# object <- runMOFA(object, DirOptions)
 # object <- readRDS(DirOptions$outFile)
+#for demonstration purposes use already fitted object
+object <- loadModel("/Users/bvelten/Documents/MOFA/CLL_MOFA_data/out/test_final/common_small_noXY_alldrugs_mean2.hdf5")
+data <- TrainData(object)
 ```
 
 # Step 3: Analyse a trained MOFA model
@@ -118,28 +120,32 @@ object <- runMOFA(object, DirOptions)
 ## Show the variance explained for each factor in each view
 ```{r}
 calculateVarianceExplained(object)
+calculateVarianceExplained(object, showtotalR2 = F, showVarComp=T)
 ```
 
-## Scatterplots of pairs of latent variables
+## Inspect latent facotrs
+Scatterplots of pairs of latent variables and beeswarm/histogram fo single LFs
 ```{r}
-scatterPairs(object, factors = c("2","3"), showMissing = F)
-# sctterPlot(object, facotr)
+scatterPairs(object, factors = c("4","8"), showMissing = F, colour_by =  data$mut["IGHV",], colour_name = "IGHV")
+scatterPlot(object, "4", "8", colour_by = as.factor(data$mut["IGHV",]), name_colour = "IGHV")
+beeswarmPlot(object, "4", groups = as.factor(data$mut["IGHV",]), groupname = "IGHV" )
+histPlot(object, "4", groups = as.factor(data$mut["IGHV",]), name_colour ="IGHV" )
 ```
 
-## Characterisation of specific latent factors
+## Characterisation of specific latent factors by weights
 
 ### Show weights and identify most relevant features
 ```{r}
-showWeightHeatmap(object, "view")
-showWeights(object, "view", factor, ntop, ntail, manual)
+showWeightHeatmap(object, "mRNA")
+showWeights(object, "mut", 4)
 ```
 
 ### Show original data for the genes with top weights
 ```{r}
-showDataHeatmap(model, view="expr", factor="2", nfeatures=50)
-
+showDataHeatmap(object, view="mRNA", factor="2", nfeatures=50)
+# showDataScatter(object, "mRNA", 4)
 # The X axis is the latent variable and the Y axis is the observed value of the feature
-# showDataScatter(model, view, factor, nfeatures=50, colour_by=NULL, shape_by=NULL)
+# showDataScatter(object, view, factor, nfeatures=50, colour_by=NULL, shape_by=NULL)
 ```
 
 
@@ -154,7 +160,7 @@ Here we are going to use the absolute value of the weight (or loading) as featur
 # The input format for feature sets has to be a binary matrix where the rows represent feature sets and the columns are features where a value of 1 indicates that the feature belongs to the corresponding feature set.
 
 # Load reactome annotations
-reactome <- readRDS("/Users/ricard/data/reactome/v59/homo_sapiens/out/human_reactome.rds")
+# reactome <- readRDS("/Users/ricard/data/reactome/v59/homo_sapiens/out/human_reactome.rds")
 
 # Load reactome annotations + information on pathways
 reactome<-readRDS("~/Documents/MOFA/CLL_MOFA_data/GO/reactome/human_reactome_binary_matrix.rds")
@@ -166,21 +172,21 @@ ReactomePathwayInfo<-ReactomePathwayInfo[ReactomePathwayInfo$species=="Homo sapi
 rownames(reactome) <- ReactomePathwayInfo$description[match(rownames(reactome), ReactomePathwayInfo$id)]
 
 # Run Feature Set Enrichment Analysis
-FSE.out <- FeatureSetEnrichmentAnalysis(model, view = "mRNA", feature.sets = reactome)
+FSE.out <- FeatureSetEnrichmentAnalysis(object, view = "mRNA", feature.sets = reactome)
 
-FSE.out <- FeatureSetEnrichmentAnalysis(
-  model,
-  view = "mRNA", 
-  factors = "all", 
-  feature.sets = reactome,
-  local.statistic = "loading",
-  transformation = "abs.value",
-  global.statistic = "mean.diff",
-  statistical.test = "permutation",
-  nperm=100, 
-  min.size=10,
-  cores=1, alpha=0.05
-)
+# FSE.out <- FeatureSetEnrichmentAnalysis(
+#   object,
+#   view = "mRNA", 
+#   factors = "all", 
+#   feature.sets = reactome,
+#   local.statistic = "loading",
+#   transformation = "abs.value",
+#   global.statistic = "mean.diff",
+#   statistical.test = "permutation",
+#   nperm=100, 
+#   min.size=10,
+#   cores=1, alpha=0.05
+# )
 
 pval <- FSE.out$pval
 # Rename pathways
@@ -206,8 +212,7 @@ object<-imputeMissing(object)
 ```
 
 
-# Cluster samples
+#  Cluster samples
 ```{r}
 clusterSamples(object, "all")
 ```
-
