--- a/MOFAtools/vignettes/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_CLL.Rmd
@@ -15,6 +15,8 @@ vignette: >
 devtools::load_all("/Users/bvelten/Documents/MOFA/MOFApackage/scGFA/MOFAtools/")
 # devtools::load_all("/Users/ricard/mofa/MOFAtools")
 library(MultiAssayExperiment)
+# %<>%, we should not use it or require the package...
+library(magrittr)
 ```
 
 # Step 1: Initialize MOFA object
@@ -120,7 +122,7 @@ data <- TrainData(object)
 ## Show the variance explained for each factor in each view
 ```{r}
 calculateVarianceExplained(object)
-calculateVarianceExplained(object, showtotalR2 = F, showVarComp=T)
+# calculateVarianceExplained(object, showtotalR2 = F, showVarComp=T)
 ```
 
 ## Inspect latent facotrs
