--- a/MOFAtools/vignettes/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_CLL.Rmd
@@ -122,7 +122,7 @@ data <- TrainData(object)
 ## Show the variance explained for each factor in each view
 ```{r}
 calculateVarianceExplained(object)
-# calculateVarianceExplained(object, showtotalR2 = F, showVarComp=T)
+calculateVarianceExplained(object, showtotalR2 = T, showVarComp = F)
 ```
 
 ## Inspect latent facotrs
@@ -131,7 +131,7 @@ Scatterplots of pairs of latent variables and beeswarm/histogram fo single LFs
 scatterPairs(object, factors = c("4","8"), showMissing = F, colour_by =  data$mut["IGHV",], colour_name = "IGHV")
 scatterPlot(object, "4", "8", colour_by = as.factor(data$mut["IGHV",]), name_colour = "IGHV")
 beeswarmPlot(object, "4", groups = as.factor(data$mut["IGHV",]), groupname = "IGHV" )
-histPlot(object, "4", groups = as.factor(data$mut["IGHV",]), name_colour ="IGHV" )
+# histPlot(object, "4", groups = as.factor(data$mut["IGHV",]), name_colour ="IGHV" )
 ```
 
 ## Characterisation of specific latent factors by weights
@@ -208,13 +208,16 @@ sigFactors <- Heatmap_FeatureSetEnrichmentAnalysis(p.values_adj, threshold=0.05)
 for(factor in sigFactors) LinePlot_FeatureSetEnrichmentAnalysis(p.values_adj, factor, threshold=0.05, max.pathways=25)
 ```
 
-# Step 4: Impute Missing observations
+# Other analysis
+## Impute Missing observations
 ```{r}
 object<-imputeMissing(object)
 ```
 
 
-#  Cluster samples
+##  Cluster samples based on latent factors
 ```{r}
 clusterSamples(object, "all")
+clusterSamples(object, "4")
+
 ```
